--- a/demos/git-projects-status.example
+++ b/demos/git-projects-status.example
@@ -1,5 +1,11 @@
 > git projects-status
 
+### eslint-config-piecioshka
+
+  15 changes
+  0 insertions
+  9 deletions
+
 ### git-scripts
 
   1 changes
