--- a/demos/git-projects-update.example
+++ b/demos/git-projects-update.example
@@ -6,7 +6,7 @@
 [updated] eslint-config-piecioshka
 [updated] fakes
 [updated] fakes-auth
-[updated] [dirty repo] git-scripts
+[updated] [dirty] git-scripts
 [updated] github-track-followers-setup
 [updated] innerhtml-vs-innertext-vs-textcontent
 [updated] offline-strategy
