--- a/demos/git-setup.example
+++ b/demos/git-setup.example
@@ -2,7 +2,7 @@
 > git setup
 [x] Run: git init
 Initialized empty Git repository in /private/tmp/test/.git/
-[x] Run: git add .
+[x] Run: git add . -v
 [x] Run: git commit -am 'Initialize project'
 [master (root-commit) c2d8b89] Initialize project
  1 file changed, 0 insertions(+), 0 deletions(-)
