--- a/demos/git-squash-all-commits.example
+++ b/demos/git-squash-all-commits.example
@@ -5,7 +5,7 @@
 ■■■■■■■■■■■■■■■■■■
 [x] Run: git init
 Initialized empty Git repository in /private/tmp/test/.git/
-[x] Run: git add .
+[x] Run: git add . -v
 [x] Run: git commit -am 'Initialize project'
 [master (root-commit) b92ea3d] Initialize project
  1 file changed, 0 insertions(+), 0 deletions(-)
