--- a/examples/git-projects-births.example
+++ b/examples/git-projects-births.example
@@ -2,14 +2,14 @@
 
 2015
 
-- [2015-09-08] eslint-config-piecioshka
+- [2015-09-08] eslint-config-piecioshka Piotr Kowalski
 
 2019
 
-- [2019-01-31] battery-life-extender
-- [2019-08-04] fakes
-- [2019-09-30] fakes-auth
+- [2019-01-31] battery-life-extender Piotr Kowalski
+- [2019-08-04] fakes Piotr Kowalski
+- [2019-09-30] fakes-auth Piotr Kowalski
 
 2022
 
-- [2022-01-28] git-scripts
+- [2022-01-28] git-scripts Piotr Kowalski
