--- a/examples/git-squash-all-commits.example
+++ b/examples/git-squash-all-commits.example
@@ -8,7 +8,7 @@ Initialized empty Git repository in /private/tmp/test/.git/
 ==> app > git add . -v
 
 ==> app > git commit -am 'Initialize project'
-[master (root-commit) b92ea3d] Initialize project
+[main (root-commit) b92ea3d] Initialize project
  1 file changed, 0 insertions(+), 0 deletions(-)
  create mode 100644 example-file.md
 
