--- a/examples/git-projects-daily-status.example
+++ b/examples/git-projects-daily-status.example
@@ -1,13 +1,9 @@
 > git projects-daily-status
-
-==> eslint-config-piecioshka
-
+/Users/user1/projects/eslint-config-piecioshka
 - 15 changes
 - 0 insertions
 - 9 deletions
-
-==> git-scripts
-
+/Users/user1/projects/git-scripts
 - 1 changes
 - 4 insertions
 - 2 deletions
