--- a/examples/git-fire.example
+++ b/examples/git-fire.example
@@ -1,12 +1,13 @@
 /app/ > git fire "Fire 🔥"
-==> app > git add . -v
-==> app > git commit -am 'Fire 🔥'
+==> app > git status -s
 
+==> app > git add . -v
+
+==> app > git commit -am 'Fire 🔥'
 [main 315db23] Fire 🔥
  1 file changed, 1 insertion(+)
 
 ==> app > git push
-
 Enumerating objects: 8, done.
 Counting objects: 100% (8/8), done.
 Delta compression using up to 16 threads
