--- a/examples/git-zip.example
+++ b/examples/git-zip.example
@@ -1,4 +1,4 @@
 > git zip ../repository.zip
-==> Verify if repository has no changes
+==> [x] # Verify if repository has no changes
 ==> No changes, building from clean repository
-==> Package created: "../repository.zip"
+==> [x] # Package created: "../repository.zip"
