--- a/examples/git-sync-verbose.example
+++ b/examples/git-sync-verbose.example
@@ -15,8 +15,5 @@ Already up to date.
 
 ==> app > git fetch -pv
 
-==> app > git push --all -v
-Everything up-to-date
-
-==> app > git push --tags -v
+==> app > git push --mirror -v
 Everything up-to-date
