Support [private] label

--- a/examples/git-squash-all-commits.example
+++ b/examples/git-squash-all-commits.example
@@ -15,4 +15,4 @@ add 'example-file.md'
 
 ==> app > git branch -m main
 
-==> app > git config remote.origin.url git@github.com:piecioshka/test.git
+==> app > git config --set remote.origin.url git@github.com:piecioshka/test.git
